<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:background="@drawable/header_background"
        android:foreground="@drawable/ic_logo"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/uqbtn"
                    style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/uq"
                    android:src="@drawable/l_uniqlo"
                    app:layout_column="0"
                    app:layout_row="0" />

                <ImageButton
                    android:id="@+id/tnfbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/tnf"
                    android:src="@drawable/l_thenorthface"
                    app:layout_column="1"
                    app:layout_row="0" />

                <ImageButton
                    android:id="@+id/rlbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="189dp"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/rl"
                    android:src="@drawable/l_ralphlauren"
                    app:layout_column="0"
                    app:layout_row="1" />

                <ImageButton
                    android:id="@+id/sbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/s"
                    android:src="@drawable/l_supreme"
                    app:layout_column="1"
                    app:layout_row="1" />

                <ImageButton
                    android:id="@+id/owbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/ow"
                    android:src="@drawable/l_offwhite"
                    app:layout_column="0"
                    app:layout_row="2" />

                <ImageButton
                    android:id="@+id/nbtn"
                    android:layout_width="194dp"
                    android:layout_height="189dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/n"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/l_nike"
                    app:layout_column="1"
                    app:layout_row="2" />

                <ImageButton
                    android:id="@+id/nbbtn"
                    android:layout_width="194dp"
                    android:layout_height="182dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/nb"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/l_newbalance"
                    app:layout_column="0"
                    app:layout_row="3" />

                <ImageButton
                    android:id="@+id/abtn"
                    android:layout_width="195dp"
                    android:layout_height="182dp"
                    android:adjustViewBounds="true"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/a"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/l_adidas"
                    app:layout_column="1"
                    app:layout_row="3" />

            </androidx.gridlayout.widget.GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>